--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 django = "^5.1.4"
+djangorestframework = "^3.15.2"
+markdown = "^3.7"
+django-filter = "^24.3"
 
 
 [build-system]
