--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ django = "^5.1.4"
 djangorestframework = "^3.15.2"
 markdown = "^3.7"
 django-filter = "^24.3"
+python-dotenv = "^1.0.1"
 
 
 [build-system]
