--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ djangorestframework = "^3.15.2"
 markdown = "^3.7"
 django-filter = "^24.3"
 python-dotenv = "^1.0.1"
+flake8 = "^7.1.1"
 
 
 [build-system]
