--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ markdown = "^3.7"
 django-filter = "^24.3"
 python-dotenv = "^1.0.1"
 flake8 = "^7.1.1"
+django-jazzmin = "^3.0.1"
 
 
 [build-system]
