--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ makefile = "^1.1.0"
 flake8 = "7.0.0"
 pyproject-flake8 = "^7.0.0"
 flake8-quotes = "^3.4.0"
+djangorestframework-simplejwt = "^5.3.1"
 
 
 [build-system]
