--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ flake8 = "7.0.0"
 pyproject-flake8 = "^7.0.0"
 flake8-quotes = "^3.4.0"
 djangorestframework-simplejwt = "^5.3.1"
+django-debug-toolbar = "^4.4.6"
+drf-spectacular = "^0.28.0"
 
 
 [build-system]
