Add custom path generation for media files based on instance class name

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ flake8-quotes = "^3.4.0"
 djangorestframework-simplejwt = "^5.3.1"
 django-debug-toolbar = "^4.4.6"
 drf-spectacular = "^0.28.0"
+pillow = "^11.0.0"
 
 
 [build-system]
