--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ djangorestframework-simplejwt = "^5.3.1"
 django-debug-toolbar = "^4.4.6"
 drf-spectacular = "^0.28.0"
 pillow = "^11.0.0"
+coverage = "^7.6.10"
 
 
 [build-system]
