--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ django-debug-toolbar = "^4.4.6"
 drf-spectacular = "^0.28.0"
 pillow = "^11.0.0"
 coverage = "^7.6.10"
+gunicorn = "^23.0.0"
+psycopg2-binary = "^2.9.10"
 
 
 [build-system]
