--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,4 +44,4 @@ include_trailing_comma = true
 force_grid_wrap = 0
 combine_as_imports = true
 lines_after_imports = 2
-exclude = [".venv", ".git", "__pycache__", "migrations", "settings.py"]
+skip = [".venv", ".git", "__pycache__", "migrations", "settings.py"]
