--- a/compose.yaml
+++ b/compose.yaml
@@ -5,21 +5,34 @@ services:
     env_file:
       - .env
     volumes:
-        - postgres_data:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -p ${POSTGRES_PORT} -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
   app:
-      build: .
-      command: sh -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
-      volumes:
-        - .:/app
-      ports:
-        - "8000:8000"
-      env_file:
-        - .env
-      depends_on:
-        - db
+    build: .
+    command: sh -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
+    volumes:
+      - .:/app
+    ports:
+      - "8000:8000"
+    env_file:
+      - .env
+    depends_on:
+      db:
+        condition: service_healthy
+    healthcheck:
+        test: ["CMD", "curl", "-f", "http://localhost:8000/health_check/"]
+        interval: 30s
+        timeout: 10s
+        retries: 3
+        start_period: 40s
 
 volumes:
-    postgres_data:
-    media:
+  postgres_data:
+  media:
