--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ gunicorn = "^23.0.0"
 psycopg2-binary = "^2.9.10"
 isort = "^5.13.2"
 flake8-annotations = "^3.1.1"
+django-health-check = "^3.18.3"
 
 
 [build-system]
