--- a/.env.sample
+++ b/.env.sample
@@ -1,8 +1,13 @@
-SECRET_KEY=SECRET_KEY
-DEBUG=DEBUG_STATUS
+SECRET_KEY=YOUR_SECRET_KEY
+DEBUG=YOUR_DEBUG_STATUS
 
-POSTGRES_HOST=POSTGRES_HOST
-POSTGRES_PORT=POSTGRES_PORT
-POSTGRES_DB=POSTGRES_DB
-POSTGRES_USER=POSTGRES_USER
-POSTGRES_PASSWORD=POSTGRES_PASSWORD
+POSTGRES_HOST=YOUR_POSTGRES_HOST
+POSTGRES_PORT=YOUR_POSTGRES_PORT
+POSTGRES_DB=YOUR_POSTGRES_DB
+POSTGRES_USER=YOUR_POSTGRES_USER
+POSTGRES_PASSWORD=YOUR_POSTGRES_PASSWORD
+
+AWS_ACCESS_KEY_ID=YOUR_AWS_ACCESS_KEY_ID
+AWS_SECRET_ACCESS_KEY=YOUR_AWS_SECRET_ACCESS_KEY
+AWS_STORAGE_BUCKET_NAME=YOUR_AWS_STORAGE_BUCKET_NAME
+AWS_S3_REGION_NAME=YOUR_AWS_S3_REGION_NAME
