--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ pyproject-flake8 = "^7.0.0"
 flake8-quotes = "^3.4.0"
 djangorestframework-simplejwt = "^5.3.1"
 django-debug-toolbar = "^4.4.6"
-drf-spectacular = "^0.28.0"
+drf-spectacular = {extras = ["sidecar"], version = "^0.28.0"}
 pillow = "^11.0.0"
 coverage = "^7.6.10"
 gunicorn = "^23.0.0"
@@ -27,6 +27,8 @@ psycopg2-binary = "^2.9.10"
 isort = "^5.13.2"
 flake8-annotations = "^3.1.1"
 django-health-check = "^3.18.3"
+django-storages = {extras = ["boto"], version = "^1.14.5"}
+boto3 = "^1.37.3"
 
 
 [build-system]
@@ -36,8 +38,8 @@ build-backend = "poetry.core.masonry.api"
 [tool.flake8]
 max-line-length = 79
 inline-quotes = "double"
-exclude = [".venv", ".git", "__pycache__", "migrations", "settings.py", "tests.py"]
-extend-ignore = ["E203"]
+exclude = [".venv", ".git", "__pycache__", "migrations", "settings.py", "tests.py", "*tests"]
+extend-ignore = ["E203", "ANN001", "ANN201", "ANN202", "W503"]
 plugins = ["flake8-annotations"]
 ignore = ["ANN101", "ANN102"]
 
