Change flake8 to pflake8

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
           poetry install
 
       - name: Run flake8
-        run: poetry run flake8 .
+        run: poetry run pflake8 .
 
       - name: Run migrations and tests
         run: |
